<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"

    android:weightSum="4"
    tools:context=".PhoneUI">
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/phone_title_text"
        android:theme="@style/ThemeOverlay.MyTitleText" />
    <AutoCompleteTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/personname"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <RelativeLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#e5e5e5"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phone number"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
                    app:ccp_countryPreference="pk,in,us"
                    app:ccp_hintExampleNumber="true" />

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="phone number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

            </LinearLayout>
            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:layout_weight="1.0"
                android:inputType="number"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey_300"
        android:gravity="center_vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <Button
                android:theme="@style/Theme.AppCompat.Light"
                android:id="@+id/button_start_verification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_phone_auth"/>

            <Button
                android:theme="@style/Theme.AppCompat.Light"
                android:id="@+id/button_verify_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"/>

            <Button
                android:theme="@style/Theme.AppCompat.Light"
                android:id="@+id/button_resend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/Theme.AppCompat.Light" />

        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">




        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:visibility="gone"
            tools:text="Aakash" />
        <TextView
            android:id="@+id/timertv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25sp"
            android:clickable="true"
            android:textSize="20sp" />




    </LinearLayout>

    <ImageView
        android:id="@+id/splash"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey_300"
        android:src="@drawable/ic_logo_white" />

</LinearLayout>